# bulirschstoer

./: README.md  meson.build  meson.options  rational-extrapolation.bib  rational-extrapolation.tex
benchmarks/: goggles.cpp  meson.build
include/: bulirschstoer.h  gnamespaces.h
refinegoggles/: meson.build  refinegoggles.cpp
subprojects/: cppgir.wrap  glbinding.wrap
tests/: bulirschstoer.cpp  meson.build  testsuite.cpp
three-body-animation/: ball-fs.glsl  ball-gs.glsl  ball-vs.glsl  glboundglarea.h  meson.build  shader.h  three-body-animation-win.blp  three-body-animation-win.cpp  three-body-animation-win.h  three-body-animation.cpp  three-body-animation.gresource.xml  three-body-glrender.cpp  three-body-glrender.h  trace-fs.glsl  trace-gs.glsl  trace-vs.glsl
